examples/tekton/trigger/el-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tekton
  namespace: tekton-pipelines
spec:
  hosts:
  - "*"
  gateways:
  - tekton-gateway
  http:
  - match:
    - uri:
        exact: /trigger
    rewrite:
      uri: /
    route:
    - destination:
        host: el-taipeihug-productpage-build-event-listener.default.svc.cluster.local
        port:
          number: 8080
  - route:
    - destination:
        host: tekton-dashboard
        port:
          number: 9097
